--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -52,6 +52,9 @@
   <script type="text/ng-template" id="myModalContent.html">
     <% include ../ng-templates/macroCreationModal %>
   </script>
+    <script type="text/ng-template" id="projectCreationModal.html">
+    <% include ../ng-templates/projectCreationModal %>
+  </script>
   <script type="text/ng-template" id="MacroEditModal.html">
     <div class="modal-header">
       <h3>Macro</h3>
