--- a/views/user/new.ejs
+++ b/views/user/new.ejs
@@ -1,28 +1,35 @@
-<form action="/user/create" method="POST" class="form-signin well">
+<form action="/signup " method="POST" class="form-signin well">
   <h2 class="form-signin-header center">Create Account</h2>
 
+<% if(req.session.flash && req.session.flash.err) { %>
+    <ul class="alert alert-success">
+
+  <%  _.each(req.session.flash.err, function(err) { %>
+    <li><%= err %></li>
+  <% }) %>
+  </ul>
+  <% } %>
+
   <div class="form-group">
-      <label for="name">Name</label>
-      <input type="text" class="form-control" placeholder="your name" name="name">
+    <label for="name">Name</label>
+    <input type="text" class="form-control signup-name" placeholder="your name" name="name">
   </div>
 
   <div class="form-group">
-          <label for="name">Email address</label>
-      <input type="text" class="form-control" placeholder="your email" name="email">
+    <label for="name">Email address</label>
+    <input type="text" class="form-control signup-email" placeholder="your email" name="email">
   </div>
 
   <div class="form-group">
-          <label for="name">Password</label>
-
-      <input type="password" class="form-control" placeholder="your password" name="password">
+    <label for="name">Password</label>
+    <input type="password" class="form-control signup-password" placeholder="your password" name="password">
   </div>
 
   <div class="form-group">
-          <label for="name">Password confirmation</label>
-
-    <input type="password" class="form-control" placeholder="password confirmation" name="confirmation">
+    <label for="name">Password confirmation</label>
+    <input type="password" class="form-control signup-confirmation" placeholder="password confirmation" name="confirmation">
   </div>
 
-  <input type="submit" class="btn btn-lg btn-primary btn-block" value="Create Account">
+  <input type="submit" class="btn btn-lg btn-primary btn-block signup-submit" value="Create Account">
   <input type="hidden" name="_csrf" value="<%= _csrf %>" />
 </form>
