--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -56,12 +56,16 @@
       <ul class="nav navbar-nav navbar-right">
         <li>
         <% if ( req.isAuthenticated() ) { %>
-          <li><a href="/user/show/<%= req.user.id %>"><%= req.user.name %></a></li>
-          <li><a href="/logout">Logout</a></li>
+          <li>
+            <a class="view-user-button" href="/user/show/<%= req.user.id %>">
+              <%= req.user.name %>
+            </a>
+          </li>
+          <li><a class="logout-button" href="/logout">Logout</a></li>
        <% } else { %>
             <form class="navbar-form navbar-left" action="/auth/login" method="POST">
             <div class="form-group">
-              <input type="email" class="form-control login-user" placeholder="email" name="username">
+              <input type="email" class="form-control login-user" placeholder="email" name="email">
             </div>
             <div class="form-group">
               <input  type="password" class="form-control login-password" placeholder="password" name="password">
