--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -44,6 +44,35 @@
  padding-top: 60px; 
 }
 
+.body.homepage{
+	background-image: url("/images/homepage-background.jpeg");
+	background-position: center top;
+  background-size: 100% auto;
+}
+
+.project-icon-container{
+  text-align: center;
+  img{
+    width: 15%;
+  }
+}
+
+.align-center{
+  text-align: center;
+}
+
+.terminal{
+  display: inline-block;
+  font-family: monospace;
+  font-weight: bold;
+  color: #ddd;
+  border-radius:4px;
+  border:10px solid #fff;
+  padding: 4em 2em;
+  background-color: #333
+}
+
+
 .form-new-proj{
   margin:auto;
   margin-top: 1%;
