--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -31,6 +31,7 @@
     <script src="/js/directives/component.js"></script>
     <script src="/js/directives/connector.js"></script>
     <script src="/js/directives/directoryFile.js"></script>
+    <script src="/js/directives/edgesvg.js"></script>
     <script src="/js/directives/filesystem.js"></script>
     <script src="/js/directives/graph.js"></script>
     <script src="/js/directives/parameterField.js"></script>
