--- a/views/static/homepage.ejs
+++ b/views/static/homepage.ejs
@@ -1,3 +1,11 @@
-<% include ../user/new.ejs %>
-<h1> ShellHive </h1>
-a flow based Unix Shell interface
+<div class="homepage">
+	<% include ../user/new.ejs %>
+	<div class="project-icon-container">
+		<img src="images/icon.svg">
+	</div>
+	<div class="align-center">
+		<div class="terminal">
+			<p>	A flow-based visual Unix Shell interface </p>g
+		</div>
+	</div>
+</div>
