--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -87,6 +87,9 @@ div[graph]{
     width:100%;
     height:100%;
 }
+
+
+
 .shell {
     z-index:auto;
     overflow:auto;
@@ -122,6 +125,24 @@ div[graph]{
         display: block;
     }
 }
+
+.edgepopup{
+    position:absolute;
+    z-index:10;
+    text-align: center;
+    margin: 0;
+    .content{
+        position:absolute;
+        white-space: nowrap;
+        margin: 0;
+    }
+    .content.top{
+        transform: translate(-50%,-100%)
+    }
+    .content.bottom{
+        transform: translate(-50%)
+    }
+}
     
 .popup a {
     padding-top:0;
@@ -149,11 +170,11 @@ div[sidebar] {
 path {
     fill:none;
     stroke:#aaa;
-    stroke-width:3;
+    stroke-width:5;
 }
 path.sel {
     stroke:#00f;
-    stroke-width:5;
+    stroke-width:6;
 }
 
 path.from-file-output{
@@ -173,7 +194,7 @@ path.from-macro{
 }
 
 path.back {
-    stroke-width:5;
+    stroke-width:7;
     stroke:#777;
 }
 
