--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -33,6 +33,7 @@
     <script src="/js/directives/directoryFile.js"></script>
     <script src="/js/directives/filesystem.js"></script>
     <script src="/js/directives/graph.js"></script>
+    <script src="/js/directives/mousetrap.js"></script>
     <script src="/js/directives/parameterField.js"></script>
     <script src="/js/directives/port.js"></script>
     <script src="/js/controllers/graphController.js"></script>
