--- a/views/static/homepage.ejs
+++ b/views/static/homepage.ejs
@@ -5,7 +5,7 @@
 	</div>
 	<div class="align-center">
 		<div class="terminal">
-			<p>	A flow-based visual Unix Shell interface </p>g
+			<p>	A flow-based visual Unix Shell interface </p>
 		</div>
 	</div>
 </div>
