--- a/assets/styles/importer.less
+++ b/assets/styles/importer.less
@@ -28,6 +28,7 @@
 //
 // etc.
 @border-radius-base:        1px;
+
 @import 'bootstrap/bootstrap.less';
 @import 'lib/ui-layout.less';
 @import 'graph.less';
@@ -57,18 +58,24 @@
   }
 }
 
+
+
 .align-center{
   text-align: center;
 }
 
+.align-right{
+  text-align: right;
+}
+
 .terminal{
+  text-align: left;
   display: inline-block;
   font-family: monospace;
-  font-weight: bold;
   color: #ddd;
   border-radius:4px;
   border:10px solid #fff;
-  padding: 4em 2em;
+  padding: 1em 4em 2em 1em;
   background-color: #333
 }
 
@@ -82,4 +89,32 @@
 .caret.caret-reversed {
   border-top-width: 0;
   border-bottom: 4px solid #000000;
+}
+
+kbd{
+  background-color: #fff;
+  color: #333;
+  border: 1px solid #ddd;
+  border-radius: 0.3em;
+
+}
+
+.chat{
+  background-color: white;
+  position: absolute;
+  right: 0;
+  top: 50px;
+  bottom: 0 ;
+  width: 20%;
+  .close{
+    position: absolute;
+    right: 0;  
+    top: 0px;  
+  }
+  form{
+    position: absolute;
+    bottom: 0;
+    width:100%
+
+  }
 }
