--- a/views/ng-templates/graphTemplate.ejs
+++ b/views/ng-templates/graphTemplate.ejs
@@ -35,28 +35,17 @@
   </div>
 </div>
 
-
-
-<div class="new-project" ng-if="page == 'newProject'">
-  <form role="form" class="form-horizontal" ng-submit='findMembers(userToFind)'>
-    <div class="form-group">
-      <label for="name" class="col-sm-2 control-label">Add member</label>
-      <div class="col-sm-10">
-        <input type="text" id="name" ng-model="userToFind" placeholder="email or user name" class="form-control">
-      </div>
-    </div>
-  </form>
-  <div ng-repeat="user in foundUsers">
-    <span class="user-name" ng-bind="user.name"></span>
-    <span class="user-email" ng-bind="user.email"></span>
-    <button class="btn btn-primary" ng-click="selectUser(user)"> Add </button>
+<div class="chat" ng-if="chat.open">
+  <button type="button" class="close" ng-click="chat.open = false" aria-hidden="true">&times;</button>
+  <div ng-repeat="c in clients track by c.id">
+    <b ng-style="{color:c.color}" ng-bind="c.name"></b>
   </div>
-  <form role="form" class="form-horizontal" ng-submit='$emit("startProject",{command: form.command})'>
-    <div class="form-group">
-      <label for="descr" class="col-sm-2 control-label">Set command</label>
-      <div class="col-sm-10">
-        <input id="descr" rows="3" ng-model="form.command" placeholder="eg: cat hello.txt | grep world" class="form-control"></input>
-      </div>
-    </div>
+  <hr>
+  <div ng-repeat="c in chatMessages">
+    <b ng-style="{color:c.color}" ng-bind="c.sender"></b>
+    <span ng-bind="c.text"></span>
+  </div>
+  <form role="form" class="form" ng-init="chatMsg = ''" ng-submit='$emit("chat",{text: chatMsg}); chatMsg = ""'>
+    <input type="text" id="name" ng-model="chatMsg" placeholder="send message" class="form-control">
   </form>
 </div>
