allows a visitor to choose a name on the chat

--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -93,6 +93,10 @@
       <li><a new-macro ng-click="open()">New Macro</a></li>
     </ul>
   </script>
-  <script type="text/ng-template" id="graphTemplate.html"><% include ../ng-templates/graphTemplate.ejs %></script>
-  <script type="text/ng-template" id="typeaheadTemplate.html"><a><span bind-html-unsafe="match.label | typeaheadHighlight:query"></span><span class="badge">14</span></a></script>
+  <script type="text/ng-template" id="graphTemplate.html">
+    <% include ../ng-templates/graphTemplate.ejs %>
+  </script>
+ <script type="text/ng-template" id="UserNameModal.html">
+    <% include ../ng-templates/UserNameModal.ejs %>
+  </script>  
 </html>
