added experimental code generation, added feedback button, movement broadcast now to graph level instead of project leve, fixed other bugs

--- a/assets/styles/graph.less
+++ b/assets/styles/graph.less
@@ -140,6 +140,14 @@ div[graph]{
     .error {
         color:#f99;
     }
+    pre{
+        background-color:#333;
+        color:#fff;
+        margin: 0;
+        padding: 0;
+        border: none;
+        font-size: 1em;
+    }
 }
 .shell.ng-hide {
     display:block !important;
