--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -58,6 +58,7 @@
       </a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
+      <li><a href="http://bit.ly/shellhive-feedback" target="_blank">Docs</a></li>
       <li><a href="http://omarcastro.github.io/ShellHive/docs/" target="_blank">Docs</a></li>
       <li>
         <a ng-click="chat.open = !chat.open">
