--- a/views/ng-templates/UserNameModal.ejs
+++ b/views/ng-templates/UserNameModal.ejs
@@ -4,11 +4,11 @@
 
 </div>
 <div class="modal-body">
-  <form role="form" class="form-horizontal">
+  <form role="form" class="form-horizontal" ng-submit="ok()">
     <div class="form-group">
       <label for="name" class="col-sm-4 control-label">Your Name</label>
       <div class="col-sm-8">
-        <input type="text" id="name" ng-model="form.name" class="form-control">
+        <input type="text" id="name" ng-model="form.name" class="form-control" required>
       </div>
     </div>  
   </form>
