--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -41,6 +41,9 @@
           <li><a mousetrap="Shift+S" ng-click="$parent.filesystem = false; $parent.shell = !shell; $parent.shell && $emit('compileGraph'); status.isopen2=false">Toogle Terminal View</a></li>
           <li><a mousetrap="Shift+R" ng-click="$parent.filesystem = false; viewGraph(rootGraph); status.isopen2=false;">View Root Graph</a></li>
           <li><a mousetrap="Shift+F" ng-click="$parent.filesystem = true; status.isopen2=false;">View FileSystem</a></li>
+          <li class="divider"></li>
+          <li class="dropdown-header">Macros</li>
+          <li ng-repeat="macro in graphModel.macroList"><a ng-bind="macro" ng-click="$parent.filesystem = false; viewGraph(graphModel.macros[macro]); status.isopen2=false"></a></li>
         </ul>
       </li>
 
@@ -58,7 +61,7 @@
       </a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="http://bit.ly/shellhive-feedback" target="_blank">Docs</a></li>
+      <li><a href="http://bit.ly/shellhive-feedback" target="_blank"><b class="badge">SEND FEEDBACK</b></a></li>
       <li><a href="http://omarcastro.github.io/ShellHive/docs/" target="_blank">Docs</a></li>
       <li>
         <a ng-click="chat.open = !chat.open">
