--- a/views/ng-templates/popupArea.ejs
+++ b/views/ng-templates/popupArea.ejs
@@ -20,10 +20,10 @@
           ng-repeat="foo in comms2 = (macroViewList() | filter:popupText)">
         <a ng-click="graph.popupSubmit(foo)">{{foo}}</a>
       </li>
-      <li ng-if="popupText.indexOf(".") > -1" class="dropdown-header">
+      <li ng-if="popupText.indexOf('.') > -1" class="dropdown-header">
         <b>file component</b>
       </li>
-      <li ng-class="cl" ng-mouseenter="cl = 'active'" ng-mouseleave="cl = ''" ng-if="popupText.indexOf(".") > -1">
+      <li ng-class="cl" ng-mouseenter="cl = 'active'" ng-mouseleave="cl = ''" ng-if="popupText.indexOf('.') > -1">
         <a ng-click="graph.popupSubmit(popupText)">{{popupText}}</a>
       </li>
     </ul>
