--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -4,6 +4,16 @@
     <title><%= (locals.project) ? project.name : "ShellHive Demo App" %></title>
     <meta charset="utf-8">
     <link rel="stylesheet" href="/styles/importer.css">
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+  ga('create', 'UA-51662040-1', '188.226.185.166');
+  ga('send', 'pageview');
+
+</script>
     
   </head>
   <body ng-app="app">
@@ -16,7 +26,6 @@
      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script>!window.jQuery && document.write('<script src="/bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
     <!--SCRIPTS-->
-    <script src="/bower_components/lazy.js/lazy.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
