added button in navbar, fix found bugs

--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -55,7 +55,7 @@
         </ul>
       </li>
 
-
+      <li><a ng-click="$parent.filesystem = !$parent.filesystem">Filesystem</a></li>
       <li><a ng-click="shell = true; $emit('runCommand', [])">
         <span class="glyphicon glyphicon-play">&nbsp;</span><span>Run</span>
       </a></li>
