--- a/views/project/play.ejs
+++ b/views/project/play.ejs
@@ -26,6 +26,7 @@
      <script src="//ajax.googleapis.com/ajax/libs/jquery/2.1.0/jquery.min.js"></script>
     <script>!window.jQuery && document.write('<script src="/bower_components/jquery/dist/jquery.min.js"><\/script>')</script>
     <!--SCRIPTS-->
+    <script src="/bower_components/lazy.js/lazy.js"></script>
     <script src="/bower_components/angular/angular.min.js"></script>
     <script src="/bower_components/angular-animate/angular-animate.min.js"></script>
     <script src="/bower_components/angular-bootstrap/ui-bootstrap-tpls.min.js"></script>
