--- a/views/ng-templates/graphNavbar.ejs
+++ b/views/ng-templates/graphNavbar.ejs
@@ -61,7 +61,7 @@
       </a></li>
     </ul>
     <ul class="nav navbar-nav navbar-right">
-      <li><a href="http://bit.ly/shellhive-feedback" target="_blank"><b class="badge">SEND FEEDBACK</b></a></li>
+      <li><a href="https://docs.google.com/forms/d/1gcaVGYNhoKEG-v5j42dNg-3nqG4WkJpFtxWAy1RYZ14/viewform" target="_blank"><b class="badge">SEND FEEDBACK</b></a></li>
       <li><a href="http://omarcastro.github.io/ShellHive/docs/" target="_blank">Docs</a></li>
       <li>
         <a ng-click="chat.open = !chat.open">
